syntax = "proto3";

package pipelines.environment.v1alpha1;

option csharp_namespace = "Pipelines.Environment.V1Alpha1";
option go_package = "github.com/cuemby/ccp-sdk/gen/go/pipelines/environment/v1alpha1";
option java_multiple_files = true;
option java_outer_classname = "EnvironmentAPIProto";
option java_package = "io.cuemby.pipelines.environment.v1alpha1";
option objc_class_prefix = "PPX";
option php_namespace = "Pipelines\\Environment\\V1Alpha1";

import "pipelines/environment/v1alpha1/environment.proto";
// import "environment.proto";

service EnvironmentAPIService{
    rpc CreateEnvironment(CreateEnvironmentRequest) returns (CreateEnvironmentResponse);
    rpc GetOneEnvironment(GetOneEnvironmentRequest) returns (GetOneEnvironmentResponse);
    rpc UpdateEnvironment(UpdateEnvironmentRequest) returns (UpdateEnvironmentResponse);
    rpc ListEnvironment(ListEnvironmentRequest) returns (ListEnvironmentResponse);
    rpc DeleteEnvironment(DeleteEnvironmentRequest) returns (DeleteEnvironmentResponse);
    rpc GetByNameEnvironment(GetByNameEnvironmentRequest) returns (GetByNameEnvironmentResponse);
    rpc CreateVclusterOrganization(CreateVclusterOrganizationRequest) returns (CreateVclusterOrganizationResponse);
    rpc ListAllEnvironment(ListAllEnvironmentRequest) returns (ListAllEnvironmentResponse);
    rpc GetEnvironmentByName(GetEnvironmentByNameRequest) returns (GetEnvironmentByNameResponse);
}

message CreateEnvironmentRequest {
    pipelines.environment.v1alpha1.Environment environment = 1;
    string user_id = 2;
}

message CreateEnvironmentResponse {
    pipelines.environment.v1alpha1.Environment environment = 1;
    string status = 2;
}

message GetOneEnvironmentRequest {
    string environment_id = 1; 
}

message GetOneEnvironmentResponse {
    pipelines.environment.v1alpha1.Environment environment = 1;
    string status = 2;
}

message UpdateEnvironmentRequest {
    pipelines.environment.v1alpha1.Environment environment = 1;
    string user_id = 2;
}

message UpdateEnvironmentResponse {
    pipelines.environment.v1alpha1.Environment environment = 1;
    string status = 2;
}

message ListEnvironmentRequest {
    string project_id = 1; 
}

message ListEnvironmentResponse {
    repeated pipelines.environment.v1alpha1.Environment environment = 1; 
}

message DeleteEnvironmentRequest {
    string environment_id = 1;
    string user_id = 2;
}

message DeleteEnvironmentResponse {
    string status = 1; 
}

message GetByNameEnvironmentRequest {
    pipelines.environment.v1alpha1.Environment environment = 1;
}

message GetByNameEnvironmentResponse {
    pipelines.environment.v1alpha1.Environment environment = 1;
    string status = 2;
}

message CreateVclusterOrganizationRequest {
    string organization_id = 2;
}

message CreateVclusterOrganizationResponse {
    string status = 1;
    string message = 2;
}

message ListAllEnvironmentRequest {
}

message ListAllEnvironmentResponse {
    repeated pipelines.environment.v1alpha1.Environment environment = 1; 
}

message GetEnvironmentByNameRequest {
    string environment_name = 1;
}

message GetEnvironmentByNameResponse {
    pipelines.environment.v1alpha1.Environment environment = 1; 
}
